# oauth-for-remote-mcp-server

./: .env.example  main.py  pyproject.toml
src/: auth.py  config.py  server.py  tavily_mcp.py
